--- a/parking_lot/gui/frontend/index.html
+++ b/parking_lot/gui/frontend/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
 <h1>Parking Lot Model</h1>
-<h2>Display</h2>
+<h2 class="header">Display</h2>
 <div id="display"></div>
 
-<h2>Queue</h2>
+<h2 class="header">Queue</h2>
 <div id="queue"></div>
 
-<h2>Statistics</h2>
+<h2 class="header">Statistics</h2>
 <div id="statistics">
     <div id="money-container">
         <label>Money gained</label>
