--- a/parking_lot/gui/frontend/index.html
+++ b/parking_lot/gui/frontend/index.html
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div id="phases-diagram">
-            <h2 class="header">Phases diagram</h2>
+            <h2 class="header">Phase diagram</h2>
             <div id="phases-diagram-plot"></div>
         </div>
     </div>
